[gd_scene load_steps=18 format=3 uid="uid://dv6t735xqxort"]

[ext_resource type="Script" uid="uid://n4mnikfsc3v4" path="res://Scripts/Main.gd" id="1_idj7w"]
[ext_resource type="Script" uid="uid://b3ymb3vdvhbdu" path="res://Scripts/Player.gd" id="1_r150o"]
[ext_resource type="Script" uid="uid://u6r8m41cqi70" path="res://Scripts/Gameplay.gd" id="2_bmxlf"]
[ext_resource type="Script" uid="uid://bjoxf672245cw" path="res://Scripts/PlayerCam.gd" id="2_vy5pj"]
[ext_resource type="PackedScene" uid="uid://b6nocjktlr8bb" path="res://Scenes/Obstacles.tscn" id="3_kln2b"]
[ext_resource type="Texture2D" uid="uid://yqs20txhmh4w" path="res://Assets/darkgrass.png" id="4_rgh2o"]
[ext_resource type="PackedScene" uid="uid://b33d2ju4ric2q" path="res://Scenes/Laser.tscn" id="4_v1gob"]
[ext_resource type="PackedScene" uid="uid://dol1nc3s525hv" path="res://Scenes/Arwing.tscn" id="5_jw32o"]
[ext_resource type="Texture2D" uid="uid://dg5jpiraocf7y" path="res://Assets/aim4.png" id="6_vy5pj"]

[sub_resource type="Environment" id="Environment_rgh2o"]
ambient_light_energy = 0.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_50glp"]

[sub_resource type="SphereMesh" id="SphereMesh_50glp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pbw6q"]
uv1_scale = Vector3(0, 0, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_kln2b"]
material = SubResource("StandardMaterial3D_pbw6q")
size = Vector2(200, 300)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rgh2o"]
albedo_texture = ExtResource("4_rgh2o")
uv1_scale = Vector3(20, 20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v1gob"]
albedo_color = Color(0.5019608, 0.8156863, 1, 1)
uv1_scale = Vector3(20, 20, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_rgh2o"]
material = SubResource("StandardMaterial3D_v1gob")
size = Vector2(200, 20)

[node name="Main" type="Node3D"]
script = ExtResource("1_idj7w")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rgh2o")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8660254, -0.43301272, 0.25, 0, 0.49999997, 0.86602545, -0.5, -0.75, 0.4330127, 0, 0, 0)
light_energy = 1.6
shadow_enabled = true

[node name="Gameplay" type="Node3D" parent="."]
script = ExtResource("2_bmxlf")

[node name="Bounds" type="Camera3D" parent="Gameplay"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -10)
fov = 90.0

[node name="PlayerCam" type="Camera3D" parent="Gameplay/Bounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)
current = true
script = ExtResource("2_vy5pj")
deadzone_size = Vector2(5, 1.5)

[node name="Player" type="CharacterBody3D" parent="Gameplay"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -5)
script = ExtResource("1_r150o")
follow_speed = 5.0
laser_scene = ExtResource("4_v1gob")

[node name="PlayerMesh" parent="Gameplay/Player" instance=ExtResource("5_jw32o")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gameplay/Player"]
transform = Transform3D(-5.2453668e-08, -1.2, 0, 1.2, -5.2453668e-08, 0, 0, 0, 1.2, 0, 0, 0)
shape = SubResource("CapsuleShape3D_50glp")

[node name="Reticle1" type="Sprite3D" parent="Gameplay/Player"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -5)
cast_shadow = 0
modulate = Color(0, 1, 0.64705884, 0.6862745)
double_sided = false
no_depth_test = true
texture = ExtResource("6_vy5pj")

[node name="Reticle2" type="Sprite3D" parent="Gameplay/Player"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, -10)
cast_shadow = 0
modulate = Color(0, 1, 0.64705884, 0.6862745)
double_sided = false
no_depth_test = true
texture = ExtResource("6_vy5pj")

[node name="Center" type="MeshInstance3D" parent="Gameplay"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
transparency = 1.0
cast_shadow = 0
mesh = SubResource("SphereMesh_50glp")
skeleton = NodePath("../Player")

[node name="Obstacles" parent="." instance=ExtResource("3_kln2b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0)
mesh = SubResource("PlaneMesh_kln2b")
surface_material_override/0 = SubResource("StandardMaterial3D_rgh2o")

[node name="Horizon" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 5, 120)
mesh = SubResource("PlaneMesh_rgh2o")
